set vertical-align to top for feature info attribute names; fixes I-13020013

--- a/components/resources/css/maptip.css
+++ b/components/resources/css/maptip.css
@@ -134,5 +134,6 @@
 }
 .feature_detail_attr_key{
     font-weight: bold;
+    vertical-align: top;
 }
 .feature_detail_attr_value{}
